Align new post forms and textareas, correct margins

--- a/css/profile.css
+++ b/css/profile.css
@@ -190,7 +190,7 @@
 }
 .profile-modal .postboard-posts .post
 {
-    padding: 5px;
+    padding: 0;
 }
 .profile-modal .post-interactions
 {
